# restock-list

./: Cargo.toml  configuration.yaml  flake.nix  install.sh  products.yaml  readme.md  restock-list.service
src/: configuration.rs  data.rs  lib.rs  main.rs  products.rs
src/endpoints/: index.rs  mod.rs  product_count_changed.rs  products_data.rs  sort.rs  sort_by_restock.rs  sort_by_shelf.rs
templates/: base.html  products.html
