[package]
name = "restock-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "restock_list"

[dependencies]
actix-web = { version = "4.5.1" }
askama = { version = "0.12.1" }
config = "0.14.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_yml = "0.0.10"
